# rewsh

./: .gitignore  Cargo.toml  README.md  TODO.md  cbindgen.toml  init.lua  makefile  status.toml
config/: init.lua
hot/: input.c  interface.c  process.c
include/: bindgen.h  debug.h  escaped_chars.h  ly_string.h  path.h  process.h  state.h  str.h  utils.h  vectors.h
include/plugin/: api.h  definitions.h  handler.h
plugins/: api.c  input.c  interface.c  process.c
plugins/core/: compile_flags.txt  rewsh.toml
plugins/core/src/: init.c
plugins/test/: rewsh.toml
plugins/test/src/: init.c
src/: debug.c  escaped_chars.c  lib.rs  ly_string.c  main.c  path.c  plugin.c  state.c  utils.c
src/args/: ffi.rs  mod.rs
src/plugin/: ffi.rs  mod.rs  version.rs
