[package]
name = "rewsh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
toml = { version= "1.0.6", features = ["serde"] }
url = { version = "2.5.8", features = ["serde"] }
dirs = "6.0.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
clang = {version="2.0.0", features=["runtime", "clang_10_0"]}
